【api】增加app、app版本、团队的路由
