# api/controller/member.go
@@ -23,8 +23,8 @@ func NewMember() *Member {
 // @Summary 获取单个用户信息API
 // @Description 获取单个用户信息
 // @Success 200 {string} string    "ok"
-// @Router /user/info/1 [get]
-func (m *Member) Info(c *gin.Context) {
+// @Router /v1/user/info/1 [GET]
+func (ctl *Member) Info(c *gin.Context) {
 	params, err := filter.View(c)
 	if err != nil {
 		api.SetResponse(c, http.StatusOK, code.ERROR_REQUEST_ERROR, "")
@@ -41,11 +41,29 @@ func (m *Member) Info(c *gin.Context) {
 	api.SetResponse(c, http.StatusOK, code.Success, member)
 }
 
-// 用户团队API
-func (m *Member) GroupView(c *gin.Context) {
+// @Tags 用户管理
+// @Summary 获取会员的团队信息 API
+// @Description 获取会员的团队信息
+// @Success 200 {string} string    "ok"
+// @Router /v1/user/group/1 [GET]
+func (ctl *Member) GroupView(c *gin.Context) {
 	api.SetResponse(c, http.StatusOK, 1, "")
 }
 
-func (m *Member) UpdatePassword(c *gin.Context) {
+// @Tags 用户管理
+// @Summary 修改密码 API
+// @Description 修改密码
+// @Success 200 {string} string    "ok"
+// @Router /v1/user/password [PUT]
+func (ctl *Member) UpdatePassword(c *gin.Context) {
+	api.SetResponse(c, http.StatusOK, 1, "")
+}
+
+// @Tags 用户管理
+// @Summary 生成TOKEN API
+// @Description 生成TOKEN
+// @Success 200 {string} string    "ok"
+// @Router /v1/user/token [POST]
+func (ctl *Member) CreateToken(c *gin.Context) {
 	api.SetResponse(c, http.StatusOK, 1, "")
 }
