# api/controller/system.go
@@ -20,7 +20,17 @@ func NewSystem() *System {
 // @Description 描述信息
 // @Success 200 {string} string    "ok"
 // @Router /system/health [get]
-func (s *System) Health(c *gin.Context) {
+func (ctl *System) Health(c *gin.Context) {
+
+	api.SetResponse(c, http.StatusOK, 1, "")
+}
+
+// @Tags 系统管理
+// @Summary 系统配置 API
+// @Description 系统配置
+// @Success 200 {string} string    "ok"
+// @Router /system/setting [POST]
+func (ctl *System) Setting(c *gin.Context) {
 
 	api.SetResponse(c, http.StatusOK, 1, "")
 }
